# zstd_views

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  vcpkg.json
CMakeInstall/: sph-zstd-config.cmake.in
test/: CMakeLists.txt  doctest_util.h  main.cpp  unit_tests.cpp
zstd/: CMakeLists.txt
zstd/include/sph/ranges/views/: zstd_decode.h  zstd_encode.h
zstd/include/sph/ranges/views/detail/: zstd_compress.h  zstd_decompress.h
